force-app/main/default/objects/Survey_URL__c/Survey_URL__c.object-meta.xml
<CustomObject>
    <label>Survey URL</label>
    <nameField>
        <label>Survey URL</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey URL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>