force-app/main/default/objects/Survey_URL__c/fields/Invalid__c.field-meta.xml
<CustomField>
    <fullName>Invalid__c</fullName>
    <formula>IF(Today()&gt;Unique_Expired_Date__c &amp;&amp;  Used__c=false,True,False)</formula>
    <label>Invalid</label>
    <type>Checkbox</type>
</CustomField>