force-app/main/default/objects/Survey_URL__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>