force-app/main/default/objects/Survey_URL__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ticket buying experience</fullName>
            </value>
            <value>
                <fullName>Flight experience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>