force-app/main/default/objects/Survey_URL__c/fields/Unique_Expired_Date__c.field-meta.xml
<CustomField>
    <fullName>Unique_Expired_Date__c</fullName>
    <label>Unique Expired Date</label>
    <type>Date</type>
</CustomField>