force-app/main/default/objects/Survey_URL__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Used__c</columns>
    <columns>Invalid__c</columns>
    <columns>Unique_Expired_Date__c</columns>
    <columns>Survey_Type__c</columns>
    <columns>Link__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>Flight experience</value>
    </filters>
    <label>All Records</label>
</ListView>